test: added repo test for get best menu items